--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "biteit/tracy-slack-logger",
   "description": "Integrates Tracy Logger to your Slack",
   "minimum-stability": "dev",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MIT",
   "authors": [
     {
@@ -12,7 +12,8 @@
   ],
   "require": {
     "tracy/tracy": "2.4.10",
-    "php": ">=5.6.0"
+    "php": ">=5.6.0",
+    "biteit/simple-slack-messenger": "dev-master"
   },
   "autoload": {
       "psr-0": {
