--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "tracy/tracy": "2.4.10",
+    "tracy/tracy": "^2.4.10",
     "php": ">=5.6.0",
     "biteit/simple-slack-messenger": "^0.2"
   },
